Fixes column spacing issue on task log.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -110,6 +110,8 @@ input {
     text-align: center;
   }
 
+  tr td.category { text-align: center; }
+
   .header, .date-header
   {
     font-weight: bold; 
